update: 更新extended model的Swagger定义，添加playerInfo接口的swagger文档
