# app/Models/Players.php
@@ -4,6 +4,83 @@ namespace App\Models;
 
 use Illuminate\Database\Eloquent\Model;
 
+/**
+ *
+ * @SWG\Definition(
+ *   definition="Player",
+ *   type="object",
+ *       @SWG\Property(
+ *           property="id",
+ *           type="integer",
+ *           format="int32",
+ *           example="10000",
+ *       ),
+ *       @SWG\Property(
+ *           property="open_id",
+ *           description="玩家微信openid",
+ *           type="string",
+ *           example="odh7zsgI75iT8FRh0fGlSojc9PWM",
+ *       ),
+ *       @SWG\Property(
+ *           property="nickname",
+ *           description="玩家昵称",
+ *           type="string",
+ *           example="小明",
+ *       ),
+ *       @SWG\Property(
+ *           property="gender",
+ *           description="玩家性别（0-女,1-男）",
+ *           type="integer",
+ *           format="int32",
+ *           example="0",
+ *       ),
+ *       @SWG\Property(
+ *           property="profession",
+ *           description="玩家职业",
+ *           type="string",
+ *           example="律师",
+ *       ),
+ *       @SWG\Property(
+ *           property="real_name",
+ *           description="玩家真实姓名",
+ *           type="string",
+ *           example="张飞",
+ *       ),
+ *       @SWG\Property(
+ *           property="identity_id",
+ *           description="玩家身份证id",
+ *           type="string",
+ *           example="456998188702118765",
+ *       ),
+ *       @SWG\Property(
+ *           property="intro",
+ *           description="个人简介",
+ *           type="string",
+ *       ),
+ *       @SWG\Property(
+ *           property="game_points",
+ *           description="宠物交互赚取游戏身价数",
+ *           type="string",
+ *           example="0.10000000",
+ *       ),
+ *       @SWG\Property(
+ *           property="points",
+ *           description="个人流通身价总数（包括冻结）",
+ *           type="string",
+ *           example="374.00000000",
+ *       ),
+ *       @SWG\Property(
+ *           property="frozen_points",
+ *           description="冻结身价数",
+ *           type="string",
+ *           example="4.00000000",
+ *       ),
+ *       allOf={
+ *           @SWG\Schema(ref="#/definitions/CreatedAtUpdatedAt"),
+ *       }
+ * )
+ *
+ */
 class Players extends Model
 {
     public $timestamps = true;
